--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             top:0;
             bottom:0;
             z-index:9998;
+            color: #222;
         }
         .popup-cookie.dis-none{
             display:none;
@@ -467,7 +468,7 @@
 
         /* SKILLS */
         .skills{
-            background-image: url(./images/bg-intro2.jpg);
+            background-image: url(./images/bg-skills.jpg);
             background-repeat:no-repeat;
             background-position:center;
             background-size:cover;
