--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             width:100%;
             max-width:1960px;
             margin:0 auto;
-            padding:0 20px;
+            padding:0 12px;
         }
         h2{
             font-weight:500;
@@ -409,10 +409,10 @@
 
 
         /* ABOUT */
-        .about{
+        .about,.projects{
             background-image:linear-gradient(90deg,rgba(0,0,0,0.85),rgba(0,0,0,0.9))
         }
-        .about h2{
+        .about h2,.projects h2{
             display:none;
         }
         .about .in{
@@ -434,7 +434,7 @@
         .about-txt{
             text-align:center;
         }
-        .about-txt h3{
+        .about-txt h3,.projects h3{
             margin-bottom:1em;
             font-weight:500;
             font-size:2em;
@@ -508,13 +508,13 @@
         .skills-bottom ul{
             display: grid;
             grid-template-columns: auto auto;
-            gap: 40px;
+            gap: 12px;
         }
         .skills-bottom li{
             border: 2px solid rgba(255,255,255,0.5);
             padding: 30px;
             display: grid;
-            gap: 20px;
+            gap: 12px;
             text-align: center;
             box-shadow: 0 0 0 #fff;
         }
@@ -548,6 +548,102 @@
             fill: #fff;
         }
 
+        /* PROJECTS */
+        .projects .in{
+            display: flex;
+            flex-flow: column nowrap;
+        }
+        .projects h3{
+            align-self: center;
+        }
+        .projects h3 span{
+            display: block;
+        }
+        .projects h3 span::after{
+            content: '';
+            display: block;
+            width: 100%;
+            height: 2px;
+            background-color: #fff;
+            margin: 5px 0 3px;
+            transition: 0.3s;
+        }
+        .all-projects ul{
+            display: grid;
+            gap: 40px;
+        }
+        .all-projects ul li{
+            display: grid;
+            border: 1px solid rgba(255,255,255,0.5);
+        }
+        .project-img{
+            order: 2;
+            overflow:hidden;
+            position: relative;
+        }
+        .project-img::after{
+            content: '';
+            display: block;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            background-color: rgba(255,255,255,0);
+            transition: 0.3s;
+        }
+        .project-img:hover::after{
+            background-color: rgba(255,255,255,0.3);
+        }
+        .project-img .img-box{
+            filter: grayscale(1);
+            transition:0.3s;
+        }
+        .project-img:hover .img-box{
+            filter: grayscale(0.8);
+            transition:0.3s;
+        }
+        .project-img:hover .img-box{
+            transform:scale(1.1);
+        }
+        .project-content{
+            order: 1;
+            padding: 30px;
+            display: grid;
+            gap: 16px;
+            align-content: center;
+        } 
+        .project-tit{
+            font-size: 2em;
+            text-transform: uppercase;
+        }
+        .project-txt{
+            font-size: 1.1em;
+            color: #999;
+            line-height: 1.5em;
+        }
+        .project-txt span:first-child{
+            font-weight: 700;
+            font-size: 1.2em;
+            color: #ccc;
+        }
+        .project-btn{
+            display: flex;
+        }
+        .project-btn>div{
+            margin-right: 6px;
+            padding: 10px;
+            /* border-radius: 4px; */
+            background-color: #333;
+        }
+        .project-btn>div:hover{
+            background-color: #fff;
+            color: #333;
+        }
+        /* .btn-doc{
+            display: none;
+        } */
+
 
 
         @media (min-width:560px){
@@ -560,18 +656,45 @@
             }
         }
 
+        @media (min-width:768px){
+            /* PROJECTS */
+            .projects .container{
+                max-width: 940px;
+                padding: 0;
+            }
+            .all-projects ul{
+                gap: 0;
+            }
+            .all-projects ul li{
+                grid-template-columns: 1fr 1fr;
+                border: none;
+            }
+            .all-projects ul li:nth-child(2n) .project-img{
+                order: 1;
+            }
+            .all-projects ul li:nth-child(2n) .project-content{
+                order: 2;
+            }
+        }
+
         @media (min-width:940px){
             .container{
                 padding:0 60px;
             }
+
+            /* HEADER */
             .header .in::before{
                 content:'';
                 display:block;
                 width:36px;
             }
+
+            /* ABOUT */
             .about .in{
                 flex-direction:row;
             }
+
+            /* SKILLS */
             .skills .in{
                 align-items: stretch;
             }
@@ -593,9 +716,27 @@
             .skills-bottom ul{
                 grid-template-columns: auto auto auto;
             }
-        }  
+
+            /* PROJECTS */
+            .projects .container{
+                width: 80%;
+                max-width: 12800px;
+                /* padding: 0 40px; */
+            }
+            .projects h3{
+                align-self: flex-start;
+            }
+            .all-projects ul li{
+                border: 1px solid rgba(255,255,255,0.5);
+                border-bottom: none;
+            }
+            .all-projects ul li:last-child{
+                border: 1px solid rgba(255,255,255,0.5);
+            }
+        }   
 
         @media (min-width:1200px){
+            /* HEADER */
             .header .in::before{
                 display:none;
             }
@@ -616,6 +757,8 @@
             #main-nav li:hover::before{
                 animation-name:none;
             }
+
+            /* INTRO */
             .intro .container{
                 justify-content: space-between;
             }
@@ -864,6 +1007,150 @@
         <section class="sec projects" id="projects">
             <div class="container">
                 <h2>projects</h2>
+                <div class="in">
+                    <h3>
+                        <span data-aos="fade-right" data-aos-delay="300">my</span>
+                        <span data-aos="fade-right" data-aos-delay="600">web</span> 
+                        <span data-aos="fade-right" data-aos-delay="900">portfolio</span>  
+                    </h3>
+                    <div class="all-projects">
+                        <ul>
+                            <li>
+                                <div class="project-img" data-aos="fade-left">
+                                    <div class="img-box"><img src="./images/img-megabox.jpg" alt="메가박스"></div>
+                                </div>
+                                <div class="project-content" data-aos="fade-right">
+                                    <div class="project-tit">
+                                        <h4>megabox</h4>
+                                    </div>
+                                    <div class="project-txt">
+                                        <p>
+                                            <span>#반응형#리뉴얼#제작기간7일#참여율100%</span>
+                                            <br>
+                                            <span>최신 고정형 웹페이지를 반응형으로 리뉴얼하였습니다. 고전적인 float, block, inline을 이용한 레이아웃을 최신 트렌드인 flex container를 이용하여 사이트 특성에 맞도록 제작하였습니다.</span>
+                                        </p>
+                                    </div>
+                                    <div class="project-btn">
+                                        <div class="btn-source">
+                                            <a href="https://github.com/jurin2/megabox" target="_blank">소스보기</a>
+                                        </div>
+                                        <div class="btn-doc">
+                                            <a href="#" target="_blank">기획안보기</a>
+                                        </div>
+                                        <div class="btn-site">
+                                            <a href="https://jurin2.github.io/megabox/" target="_blank">바로가기</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="project-img" data-aos="fade-left">
+                                    <div class="img-box"><img src="./images/img-paiks.jpg" alt="빽다방"></div>
+                                </div>
+                                <div class="project-content" data-aos="fade-right">
+                                    <div class="project-tit">
+                                        <h4>paik's coffee</h4>
+                                    </div>
+                                    <div class="project-txt">
+                                        <p>
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum eos minima ratione nesciunt soluta! Eligendi repellat iusto nulla. Ut velit saepe porro repellat. Recusandae iste totam quia minus voluptatem facere.
+                                        </p>
+                                    </div>
+                                    <div class="project-btn">
+                                        <div class="btn-source">
+                                            <a href="https://github.com/jurin2/paikdabang" target="_blank">소스보기</a>
+                                        </div>
+                                        <div class="btn-doc">
+                                            <a href="#" target="_blank">기획안보기</a>
+                                        </div>
+                                        <div class="btn-site">
+                                            <a href="https://jurin2.github.io/paikdabang/" target="_blank">바로가기</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="project-img" data-aos="fade-left">
+                                    <div class="img-box"><img src="./images/img-indigo.jpg" alt="인디고"></div>
+                                </div>
+                                <div class="project-content" data-aos="fade-right">
+                                    <div class="project-tit">
+                                        <h4>indigo</h4>
+                                    </div>
+                                    <div class="project-txt">
+                                        <p>
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum eos minima ratione nesciunt soluta! Eligendi repellat iusto nulla. Ut velit saepe porro repellat. Recusandae iste totam quia minus voluptatem facere.
+                                        </p>
+                                    </div>
+                                    <div class="project-btn">
+                                        <div class="btn-source">
+                                            <a href="https://github.com/jurin2/indigo_m" target="_blank">소스보기</a>
+                                        </div>
+                                        <div class="btn-doc">
+                                            <a href="#" target="_blank">기획안보기</a>
+                                        </div>
+                                        <div class="btn-site">
+                                            <a href="https://jurin2.github.io/indigo_m/" target="_blank">바로가기</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="project-img" data-aos="fade-left">
+                                    <div class="img-box"><img src="./images/img-hollys.jpg" alt="할리스커피"></div>
+                                </div>
+                                <div class="project-content" data-aos="fade-right">
+                                    <div class="project-tit">
+                                        <h4>hollys</h4>
+                                    </div>
+                                    <div class="project-txt">
+                                        <p>
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum eos minima ratione nesciunt soluta! Eligendi repellat iusto nulla. Ut velit saepe porro repellat. Recusandae iste totam quia minus voluptatem facere.
+                                        </p>
+                                    </div>
+                                    <div class="project-btn">
+                                        <div class="btn-source">
+                                            <a href="https://github.com/jurin2/hollys" target="_blank">소스보기</a>
+                                        </div>
+                                        <div class="btn-doc">
+                                            <a href="#" target="_blank">기획안보기</a>
+                                        </div>
+                                        <div class="btn-site">
+                                            <a href="https://jurin2.github.io/hollys/" target="_blank">바로가기</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="project-img" data-aos="fade-left">
+                                    <div class="img-box"><img src="./images/img-travel.jpg" alt="트래버"></div>
+                                </div>
+                                <div class="project-content" data-aos="fade-right">
+                                    <div class="project-tit">
+                                        <h4>travel</h4>
+                                    </div>
+                                    <div class="project-txt">
+                                        <p>
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum eos minima ratione nesciunt soluta! Eligendi repellat iusto nulla. Ut velit saepe porro repellat. Recusandae iste totam quia minus voluptatem facere.
+                                        </p>
+                                    </div>
+                                    <div class="project-btn">
+                                        <div class="btn-source">
+                                            <a href="https://github.com/jurin2/travel" target="_blank">소스보기</a>
+                                        </div>
+                                        <div class="btn-doc">
+                                            <a href="#" target="_blank">기획안보기</a>
+                                        </div>
+                                        <div class="btn-site">
+                                            <a href="https://jurin2.github.io/travel/" target="_blank">바로가기</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="sec contact" id="contact">
